Affiliates MailChimp                 Changelog                 www.itthinx.com

= 3.0.1 =
* Fixed unspecific function name used for the deactivation hook.
* Security fix : fixed unsanitized $_POST data stored.
* Improved code formatting.
* Added the plugin version constant.
* Updated the minimum PHP version required.

= 3.0.0 =
* Affiliates, Affiliates Pro and Affiliates Enterprise 2.x and 3.x compatible.
* Adds support for MailChimp API v3.
* Added option to delete settings upon deactivation.
* Wordpress 4.9.8 compatible.