@@ -6,6 +6,7 @@ Affiliates MailChimp                 Changelog                 www.itthinx.com
 * Improved code formatting.
 * Added the plugin version constant.
 * Updated the minimum PHP version required.
+* Fixed some descriptions in the settings.
 
 = 3.0.0 =
 * Affiliates, Affiliates Pro and Affiliates Enterprise 2.x and 3.x compatible.
